<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_dialog"
    android:paddingEnd="@dimen/padding_dialog"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center_vertical"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="@dimen/about_vertical_paddingTop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher_round"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_messaggi_description"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/about_vertical_paddingTop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_webSite"
        android:textColor="@color/blue_900"
        android:layout_marginTop="@dimen/about_vertical_paddingTop"/>

</LinearLayout>