<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.CitasMedicasActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/content_main"
            android:background="#FFFFFF" />

        <View
            android:id="@+id/fabBGLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparente"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            android:clipToPadding="false"
            app:layout_behavior=".utils.MoveUpwardBehavior">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_principal1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/fui_transparent"
                android:src="@drawable/ic_settings"
                app:backgroundTint="@color/fui_transparent"
                app:fabSize="normal"
                app:rippleColor="@color/fui_transparent" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_eliminar_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginEnd="@dimen/standard_3"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:visibility="gone"
            app:layout_behavior=".utils.MoveUpwardBehavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/curvatura_azul"
                android:padding="@dimen/standard_6"
                android:text="@string/main_menu_action_singoff"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/bordes" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_eliminar_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:src="@drawable/ic_delete"
                android:tint="@android:color/white"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_acerca_de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginEnd="@dimen/standard_3"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:visibility="gone"
            app:layout_behavior=".utils.MoveUpwardBehavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/curvatura_azul"
                android:padding="@dimen/standard_6"
                android:text="@string/main_menu_about"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/bordes" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_acerca_de"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:src="@drawable/ic_info"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ver_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginEnd="@dimen/standard_3"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:visibility="gone"
            app:layout_behavior=".utils.MoveUpwardBehavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/curvatura_azul"
                android:padding="@dimen/standard_6"
                android:text="@string/profile_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/bordes" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_ver_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:src="@drawable/ic_person"
                android:tint="@android:color/white"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:layout_marginEnd="@dimen/standard_3"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:visibility="gone"
            app:layout_behavior=".utils.MoveUpwardBehavior">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/curvatura_azul"
                android:padding="@dimen/standard_6"
                android:text="@string/salir"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/bordes" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:src="@drawable/ic_exit"
                android:tint="@android:color/white"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_funcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_administrador"
                android:layout_width="@dimen/standard_200"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_12"
                android:text="ADMINISTRADOR" />

            <Button
                android:id="@+id/btn_doctor"
                android:layout_width="@dimen/standard_200"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_12"
                android:text="DOCTOR" />

            <Button
                android:id="@+id/btn_paciente"
                android:layout_width="@dimen/standard_200"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_12"
                android:text="PACIENTE" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>